[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asiakirjasuodatin"
version = "2023.6.24"
description = "Document filter (Finnish: asiakirjasuodatin) that read a JSON serialization of the Pandoc AST from stdin, transform it in some way, and write it to stdout."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
maintainers = [{ name = "Stefan Hagen", email = "stefan@hagen.link" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
]
keywords = ["developer-tools", "devops"]
dependencies = [
    "msgspec >= 0.17.0",
    "pandocfilters >= 1.5.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "coverage", "hypothesis", "mypy", "pytest", "pytest-cov", "pytest-flake8", "ruff"]

[project.urls]
Homepage = "https://git.sr.ht/~sthagen/asiakirjasuodatin"
Bug-Tracker = "https://todo.sr.ht/~sthagen/asiakirjasuodatin"
Documentation = "https://codes.dilettant.life/docs/asiakirjasuodatin"
Source-Code = "https://git.sr.ht/~sthagen/asiakirjasuodatin"
Test-Coverage = "https://codes.dilettant.life/coverage/asiakirjasuodatin"

[project.scripts]
asiakirjasuodatin = "asiakirjasuodatin.cli:app"

[tool.setuptools.packages.find]
include = ["asiakirjasuodatin"]
exclude = ["test*"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = [ "py39", "py310", "py311", "py312" ]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [ "pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "@overload" ]
omit = [ "*/__main__.py" ]

[tool.mypy]
strict = true
implicit_reexport = true

[tool.pytest]
testpaths = "test"
filterwarnings = "error"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
exclude = [ ".direnv", ".eggs", ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pypackages__", "bin", "dist", "venv" ]
target-version = "py312"

[tool.ruff.lint]
select = [ "E", "F", "Q" ]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.mccabe]
max-complexity = 42

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402" ]
